Creating an object for android driver and then passing the appium server URL and options as capabilites. Then, I have set the device and then the location to the apk which we will be automating.